--- a/producao/product.html
+++ b/producao/product.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PRODUTO - THOUZ STORE</title>
+  <title>HOME - THOUZ STORE</title>
 
   <!--estilo-->
   <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
@@ -113,21 +113,21 @@
   </header> <!--Fim cabeçalho-->
   <div class="container-fluid">
     <!--banner-->
-    <img src="img/banner_principal02.png" class="img-fluid" alt="Responsive image">
+    <img src="img/banner_principal02.jpg" class="img-fluid" alt="Responsive image">
   </div>
   <div class="container-fluid d-none d-md-block my-3">
-    <img src="img/banner02.png" class="img-fluid mx-auto d-block" alt="Responsive image">
+    <img src="img/banner02.jpg" class="img-fluid mx-auto d-block" alt="Responsive image">
   </div>
   <div class="container-fluid my-3">
-    <h3 class="text-center"><span><img src="img/star_icon.png" style="width: 30px;"> Os mais vendidos! <span><img
-            src="img/star_icon.png" style="width: 30px;"></span></h3>
+    <h3 class="text-center"><span><img src="img/star_icon.jpg" style="width: 30px;"> Os mais vendidos! <span><img
+            src="img/star_icon.jpg" style="width: 30px;"></span></h3>
   </div>
   <div class="container-fluid card-deck">
     <div class="card">
-      <img src="img/banner_produto01v02.png" class="card-img-top" alt="...">
+      <img src="img/banner_produto01v02.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">Nome do produto</h5>
-        <img src="img/cores_produtos.png" class="img-fluid mx-auto d-block my-2">
+        <img src="img/cores_produtos.jpg" class="img-fluid mx-auto d-block my-2">
         <p class="card-text text-center">R$150,00</p>
         <p class="card-text text-center"><small>4x de R$37,50</small></p>
         <button class="btn btn-outline-secondary mx-auto d-block" type="button" id="rastrear"><i
@@ -135,10 +135,10 @@
       </div>
     </div>
     <div class="card">
-      <img src="img/banner_produto02v02.png" class="card-img-top" alt="...">
+      <img src="img/banner_produto02v02.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">Nome do produto</h5>
-        <img src="img/cores_produtos.png" class="img-fluid mx-auto d-block my-2">
+        <img src="img/cores_produtos.jpg" class="img-fluid mx-auto d-block my-2">
         <p class="card-text text-center">R$150,00</p>
         <p class="card-text text-center"><small>4x de R$37,50</small></p>
         <button class="btn btn-outline-secondary mx-auto d-block" type="button" id="rastrear"><i
@@ -146,10 +146,10 @@
       </div>
     </div>
     <div class="card">
-      <img src="img/banner_produto03v02.png" class="card-img-top" alt="...">
+      <img src="img/banner_produto03v02.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">Nome do produto</h5>
-        <img src="img/cores_produtos.png" class="img-fluid mx-auto d-block my-2">
+        <img src="img/cores_produtos.jpg" class="img-fluid mx-auto d-block my-2">
         <p class="card-text text-center">R$150,00</p>
         <p class="card-text text-center"><small>4x de R$37,50</small></p>
         <button class="btn btn-outline-secondary mx-auto d-block" type="button" id="rastrear"><i
@@ -157,10 +157,10 @@
       </div>
     </div>
     <div class="card">
-      <img src="img/banner_produto04v02.png" class="card-img-top" alt="...">
+      <img src="img/banner_produto04v02.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">Nome do produto</h5>
-        <img src="img/cores_produtos.png" class="img-fluid mx-auto d-block my-2">
+        <img src="img/cores_produtos.jpg" class="img-fluid mx-auto d-block my-2">
         <p class="card-text text-center">R$150,00</p>
         <p class="card-text text-center"><small>4x de R$37,50</small></p>
         <button class="btn btn-outline-secondary mx-auto d-block" type="button" id="rastrear"><i
@@ -168,10 +168,10 @@
       </div>
     </div>
     <div class="card">
-      <img src="img/banner_produto05.png" class="card-img-top" alt="...">
+      <img src="img/banner_produto05.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title text-center">Nome do produto</h5>
-        <img src="img/cores_produtos.png" class="img-fluid mx-auto d-block my-2">
+        <img src="img/cores_produtos.jpg" class="img-fluid mx-auto d-block my-2">
         <p class="card-text text-center">R$150,00</p>
         <p class="card-text text-center"><small>4x de R$37,50</small></p>
         <button class="btn btn-outline-secondary mx-auto d-block" type="button" id="rastrear"><i
@@ -191,37 +191,37 @@
         <div id="carousel-example" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner row mx-auto" role="listbox">
             <div class="carousel-item col-sm-6 col-md-4 col-lg-3 active">
-              <img src="img/banner_insta01v02.png" class="img-fluid mx-auto d-block" alt="img1">
+              <img src="img/banner_insta01v02.jpg" class="img-fluid mx-auto d-block" alt="img1">
             </div>
             <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-              <img src="img/banner_insta02v02.png" class="img-fluid mx-auto d-block" alt="img2">
+              <img src="img/banner_insta02v02.jpg" class="img-fluid mx-auto d-block" alt="img2">
             </div>
             <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-              <img src="img/banner_insta03v02.png" class="img-fluid mx-auto d-block" alt="img3">
+              <img src="img/banner_insta03v02.jpg" class="img-fluid mx-auto d-block" alt="img3">
             </div>
             <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-              <img src="img/banner_insta04v02.png" class="img-fluid mx-auto d-block" alt="img4">
+              <img src="img/banner_insta04v02.jpg" class="img-fluid mx-auto d-block" alt="img4">
             </div>
             <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-              <img src="img/banner_insta05v02.png" class="img-fluid mx-auto d-block" alt="img5">
+              <img src="img/banner_insta05v02.jpg" class="img-fluid mx-auto d-block" alt="img5">
             </div>
             <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-              <img src="img/banner_insta06v02.png" class="img-fluid mx-auto d-block" alt="img6">
+              <img src="img/banner_insta06v02.jpg" class="img-fluid mx-auto d-block" alt="img6">
             </div>
             <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-              <img src="img/banner_produto01v02.png" class="img-fluid mx-auto d-block" alt="img7">
+              <img src="img/banner_produto01v02.jpg" class="img-fluid mx-auto d-block" alt="img7">
             </div>
             <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-              <img src="img/banner_produto02v02.png" class="img-fluid mx-auto d-block" alt="img8">
+              <img src="img/banner_produto02v02.jpg" class="img-fluid mx-auto d-block" alt="img8">
             </div>
             <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-              <img src="img/banner_produto03v02.png" class="img-fluid mx-auto d-block" alt="img9">
+              <img src="img/banner_produto03v02.jpg" class="img-fluid mx-auto d-block" alt="img9">
             </div>
             <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-              <img src="img/banner_produto04v02.png" class="img-fluid mx-auto d-block" alt="img10">
+              <img src="img/banner_produto04v02.jpg" class="img-fluid mx-auto d-block" alt="img10">
             </div>
             <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-              <img src="img/banner_produto05.png" class="img-fluid mx-auto d-block" alt="img11">
+              <img src="img/banner_produto05.jpg" class="img-fluid mx-auto d-block" alt="img11">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carousel-example" role="button" data-slide="prev">
@@ -249,7 +249,7 @@
 
   <footer class="container-fluid row"><!--Início rodapé-->
     <div class="col-sm-12 col-md-3"><!--Logotipo e dados da empresa-->
-      <img src="img/logotipo_circle.png" class="mx-auto mb-3 d-block" alt="thouz-logotipo" style="width: 150px;">
+      <img src="img/logotipo_circle.jpg" class="mx-auto mb-3 d-block" alt="thouz-logotipo" style="width: 150px;">
       <div>
         <h4>DADOS DA EMPRESA</h4>
         <p>Copyright 2020 - Todos os Direitos Reservados</p>
@@ -276,7 +276,7 @@
         <div class="col-md-4 col-sm-12"><!--Redes sociais-->
           <div>
             <h4>SIGA NOSSA FAN PAGE</h4>
-            <img src="img/facebook_page.png" alt="" srcset="">
+            <img src="img/facebook_page.jpg" alt="" srcset="">
           </div>
           <div>
             <h4>SIGA-NOS NAS REDES SOCIAIS</h4>
@@ -287,7 +287,7 @@
       </div>
       <div><!--Formas de pagamento-->
         <h4>PAGUE COM</h4>
-        <img src="img/meios_pagamento.png" alt="" srcset="">
+        <img src="img/meios_pagamento.jpg" alt="" srcset="">
       </div>
     </div>
   </footer><!--Final rodapé-->
