--- a/producao/search.html
+++ b/producao/search.html
@@ -191,20 +191,20 @@
             </div>
             <div class="container-fluid card-deck my-3">
                 <div class="card">
-                    <img src="img/categoria_calça01.png" class="card-img-top" alt="...">
+                    <img src="img/categoria_calça01.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-center">Nome do produto</h5>
-                        <img src="img/cores_produtos.png" class="img-fluid mx-auto d-block my-2">
+                        <img src="img/cores_produtos.jpg" class="img-fluid mx-auto d-block my-2">
                         <p class="card-text text-center">R$150,00</p>
                         <p class="card-text text-center"><small>4x de R$37,50</small></p>
                         <button class="btn btn-outline-secondary mx-auto d-block" type="button" id="rastrear" onclick="window.location.href = 'product.html'"><i class="fas fa-shopping-bag"></i> Quero este item</button>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/categoria_calça02.png" class="card-img-top" alt="...">
+                    <img src="img/categoria_calça02.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-center">Nome do produto</h5>
-                        <img src="img/cores_produtos.png" class="img-fluid mx-auto d-block my-2">
+                        <img src="img/cores_produtos.jpg" class="img-fluid mx-auto d-block my-2">
                         <p class="card-text text-center">R$150,00</p>
                         <p class="card-text text-center"><small>4x de R$37,50</small></p>
                         <button class="btn btn-outline-secondary mx-auto d-block" type="button" id="rastrear"><i
@@ -212,10 +212,10 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/categoria_calça03.png" class="card-img-top" alt="...">
+                    <img src="img/categoria_calça0" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-center">Nome do produto</h5>
-                        <img src="img/cores_produtos.png" class="img-fluid mx-auto d-block my-2">
+                        <img src="img/cores_produtos.jpg" class="img-fluid mx-auto d-block my-2">
                         <p class="card-text text-center">R$150,00</p>
                         <p class="card-text text-center"><small>4x de R$37,50</small></p>
                         <button class="btn btn-outline-secondary mx-auto d-block" type="button" id="rastrear"><i
@@ -225,10 +225,10 @@
             </div>
             <div class="container-fluid card-deck my-3">
                 <div class="card">
-                    <img src="img/categoria_calça04.png" class="card-img-top" alt="...">
+                    <img src="img/categoria_calça04.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-center">Nome do produto</h5>
-                        <img src="img/cores_produtos.png" class="img-fluid mx-auto d-block my-2">
+                        <img src="img/cores_produtos.jpg" class="img-fluid mx-auto d-block my-2">
                         <p class="card-text text-center">R$150,00</p>
                         <p class="card-text text-center"><small>4x de R$37,50</small></p>
                         <button class="btn btn-outline-secondary mx-auto d-block" type="button" id="rastrear"><i
@@ -236,10 +236,10 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/categoria_calça05.png" class="card-img-top" alt="...">
+                    <img src="img/categoria_calça05.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-center">Nome do produto</h5>
-                        <img src="img/cores_produtos.png" class="img-fluid mx-auto d-block my-2">
+                        <img src="img/cores_produtos.jpg" class="img-fluid mx-auto d-block my-2">
                         <p class="card-text text-center">R$150,00</p>
                         <p class="card-text text-center"><small>4x de R$37,50</small></p>
                         <button class="btn btn-outline-secondary mx-auto d-block" type="button" id="rastrear"><i
@@ -247,10 +247,10 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/banner_produto05.png" class="card-img-top" alt="...">
+                    <img src="img/banner_produto05.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-center">Nome do produto</h5>
-                        <img src="img/cores_produtos.png" class="img-fluid mx-auto d-block my-2">
+                        <img src="img/cores_produtos.jpg" class="img-fluid mx-auto d-block my-2">
                         <p class="card-text text-center">R$150,00</p>
                         <p class="card-text text-center"><small>4x de R$37,50</small></p>
                         <button class="btn btn-outline-secondary mx-auto d-block" type="button" id="rastrear"><i
@@ -274,37 +274,37 @@
                 <div id="carousel-example" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner row mx-auto" role="listbox">
                         <div class="carousel-item col-sm-6 col-md-4 col-lg-3 active">
-                            <img src="img/banner_insta01v02.png" class="img-fluid mx-auto d-block" alt="img1">
+                            <img src="img/banner_insta01v02.jpg" class="img-fluid mx-auto d-block" alt="img1">
                         </div>
                         <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/banner_insta02v02.png" class="img-fluid mx-auto d-block" alt="img2">
+                            <img src="img/banner_insta02v02.jpg" class="img-fluid mx-auto d-block" alt="img2">
                         </div>
                         <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/banner_insta03v02.png" class="img-fluid mx-auto d-block" alt="img3">
+                            <img src="img/banner_insta03v02.jpg" class="img-fluid mx-auto d-block" alt="img3">
                         </div>
                         <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/banner_insta04v02.png" class="img-fluid mx-auto d-block" alt="img4">
+                            <img src="img/banner_insta04v02.jpg" class="img-fluid mx-auto d-block" alt="img4">
                         </div>
                         <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/banner_insta05v02.png" class="img-fluid mx-auto d-block" alt="img5">
+                            <img src="img/banner_insta05v02.jpg" class="img-fluid mx-auto d-block" alt="img5">
                         </div>
                         <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/banner_insta06v02.png" class="img-fluid mx-auto d-block" alt="img6">
+                            <img src="img/banner_insta06v02.jpg" class="img-fluid mx-auto d-block" alt="img6">
                         </div>
                         <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/banner_produto01v02.png" class="img-fluid mx-auto d-block" alt="img7">
+                            <img src="img/banner_produto01v02.jpg" class="img-fluid mx-auto d-block" alt="img7">
                         </div>
                         <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/banner_produto02v02.png" class="img-fluid mx-auto d-block" alt="img8">
+                            <img src="img/banner_produto02v02.jpg" class="img-fluid mx-auto d-block" alt="img8">
                         </div>
                         <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/banner_produto03v02.png" class="img-fluid mx-auto d-block" alt="img9">
+                            <img src="img/banner_produto03v02.jpg" class="img-fluid mx-auto d-block" alt="img9">
                         </div>
                         <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/banner_produto04v02.png" class="img-fluid mx-auto d-block" alt="img10">
+                            <img src="img/banner_produto04v02.jpg" class="img-fluid mx-auto d-block" alt="img10">
                         </div>
                         <div class="carousel-item col-sm-6 col-md-4 col-lg-3">
-                            <img src="img/banner_produto05.png" class="img-fluid mx-auto d-block" alt="img11">
+                            <img src="img/banner_produto05.jpg" class="img-fluid mx-auto d-block" alt="img11">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carousel-example" role="button" data-slide="prev">
@@ -339,7 +339,7 @@
         <!--Início rodapé-->
         <div class="col-sm-12 col-md-3">
             <!--Logotipo e dados da empresa-->
-            <img src="img/logotipo_circle.png" class="mx-auto mb-3 d-block" alt="thouz-logotipo"
+            <img src="img/logotipo_circle.jpg" class="mx-auto mb-3 d-block" alt="thouz-logotipo"
                 style="width: 150px;">
             <div>
                 <h4>DADOS DA EMPRESA</h4>
@@ -370,7 +370,7 @@
                     <!--Redes sociais-->
                     <div>
                         <h4>SIGA NOSSA FAN PAGE</h4>
-                        <img src="../img/facebook_page.png" alt="" srcset="">
+                        <img src="../img/facebook_page.jpg" alt="" srcset="">
                     </div>
                     <div>
                         <h4>SIGA-NOS NAS REDES SOCIAIS</h4>
@@ -383,7 +383,7 @@
             <div>
                 <!--Formas de pagamento-->
                 <h4>PAGUE COM</h4>
-                <img src="img/meios_pagamento.png" alt="" srcset="">
+                <img src="img/meios_pagamento.jpg" alt="" srcset="">
             </div>
         </div>
     </footer>
