--- a/dev/search.html
+++ b/dev/search.html
@@ -212,7 +212,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/categoria_calça0" class="card-img-top" alt="...">
+                    <img src="img/categoria_calça03.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-center">Nome do produto</h5>
                         <img src="img/cores_produtos.jpg" class="img-fluid mx-auto d-block my-2">
