corrigido extensao logo rodapé

--- a/dev/index.html
+++ b/dev/index.html
@@ -249,7 +249,7 @@
 
   <footer class="container-fluid row"><!--Início rodapé-->
     <div class="col-sm-12 col-md-3"><!--Logotipo e dados da empresa-->
-      <img src="img/logotipo_circle.jpg" class="mx-auto mb-3 d-block" alt="thouz-logotipo" style="width: 150px;">
+      <img src="img/logotipo_circle.png" class="mx-auto mb-3 d-block" alt="thouz-logotipo" style="width: 150px;">
       <div>
         <h4>DADOS DA EMPRESA</h4>
         <p>Copyright 2020 - Todos os Direitos Reservados</p>
