--- a/dev/search.html
+++ b/dev/search.html
@@ -383,7 +383,7 @@
             <div>
                 <!--Formas de pagamento-->
                 <h4>PAGUE COM</h4>
-                <img src="img/meios_pagamento.jpg" alt="" srcset="">
+                <img src="img/meios_pagamento.png" alt="" srcset="">
             </div>
         </div>
     </footer>
