--- a/producao/product.html
+++ b/producao/product.html
@@ -276,7 +276,7 @@
         <div class="col-md-4 col-sm-12"><!--Redes sociais-->
           <div>
             <h4>SIGA NOSSA FAN PAGE</h4>
-            <img src="img/facebook_page.jpg" alt="" srcset="">
+            <img src="img/facebook_page.png" alt="" srcset="">
           </div>
           <div>
             <h4>SIGA-NOS NAS REDES SOCIAIS</h4>
