--- a/producao/search.html
+++ b/producao/search.html
@@ -339,7 +339,7 @@
         <!--Início rodapé-->
         <div class="col-sm-12 col-md-3">
             <!--Logotipo e dados da empresa-->
-            <img src="img/logotipo_circle.jpg" class="mx-auto mb-3 d-block" alt="thouz-logotipo"
+            <img src="img/logotipo_circle.png" class="mx-auto mb-3 d-block" alt="thouz-logotipo"
                 style="width: 150px;">
             <div>
                 <h4>DADOS DA EMPRESA</h4>
