--- a/dev/search.html
+++ b/dev/search.html
@@ -339,8 +339,7 @@
         <!--Início rodapé-->
         <div class="col-sm-12 col-md-3">
             <!--Logotipo e dados da empresa-->
-            <img src="img/logotipo_circle.jpg" class="mx-auto mb-3 d-block" alt="thouz-logotipo"
-                style="width: 150px;">
+            <a href="index.html"><img src="img/logotipo_circle.png" class="mx-auto d-block" alt="thouz-logotipo" style="width: 150px;"></a>
             <div>
                 <h4>DADOS DA EMPRESA</h4>
                 <p>Copyright 2020 - Todos os Direitos Reservados</p>
@@ -383,7 +382,7 @@
             <div>
                 <!--Formas de pagamento-->
                 <h4>PAGUE COM</h4>
-                <img src="img/meios_pagamento.png" alt="" srcset="">
+                <img src="img/meios_pagamento.jpg" alt="" srcset="" class="col-md-4 col-sm-12">
             </div>
         </div>
     </footer>
