--- a/producao/product.html
+++ b/producao/product.html
@@ -159,7 +159,7 @@
       <h4>Descrição</h4>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis elementum a mi at vulputate. Suspendisse urna massa, tempus sit amet dolor eget, efficitur accumsan felis. Aenean sagittis nisl sed enim tempor posuere. Etiam ut mollis augue. Aliquam fermentum urna eget tristique dapibus. Nulla dui libero, fermentum eget orci a, consectetur condimentum ante. Nunc quis aliquam turpis. Curabitur venenatis justo et diam sollicitudin blandit. In ut quam vitae velit molestie tincidunt.</p>
       <h4>Tabela de medidas</h4>
-      <img src="img/manequim.jpg" alt="" srcset="" class="mx-auto d-block">
+      <img src="img/manequim.jpg" alt="" srcset="" class="col-md-7 col-sm-12 mx-auto d-block">
     </div>
   </section><!--Fim produto-->
 
@@ -228,7 +228,7 @@
   <div class="container-fluid my-3">
     <h3 class="text-center"><i class="fab fa-instagram"></i> Instagram</h3>
   </div>
-  <div> <!--Início posts Instagram-->
+<!--Início posts Instagram-->
 
     <!-- Top content -->
     <div class="container-fluid top-content">
@@ -280,8 +280,7 @@
         </div>
       </div>
     </div>
-
-  </div> <!--Fim posts Instagram-->
+<!--Fim posts Instagram-->
 
   <div class="container-fluid bg-amarelo d-flex align-items-center justify-content-center flex-wrap my-3 py-3"><!--Início Formulário de Newsletter-->
     <div class="col-sm-12 col-md-3"><h4 class="text-center">Receba nossas ofertas:</h3></div>
@@ -294,7 +293,7 @@
 
   <footer class="container-fluid row"><!--Início rodapé-->
     <div class="col-sm-12 col-md-3"><!--Logotipo e dados da empresa-->
-      <img src="img/logotipo_circle.png" class="mx-auto mb-3 d-block" alt="thouz-logotipo" style="width: 150px;">
+      <a href="index.html"><img src="img/logotipo_circle.png" class="mx-auto d-block" alt="thouz-logotipo" style="width: 150px;"></a>
       <div>
         <h4>DADOS DA EMPRESA</h4>
         <p>Copyright 2020 - Todos os Direitos Reservados</p>
@@ -332,7 +331,7 @@
       </div>
       <div><!--Formas de pagamento-->
         <h4>PAGUE COM</h4>
-        <img src="img/meios_pagamento.jpg" alt="" srcset="">
+        <img src="img/meios_pagamento.jpg" alt="" srcset="" class="col-md-4 col-sm-12">
       </div>
     </div>
   </footer><!--Final rodapé-->
