--- a/dev/cart.html
+++ b/dev/cart.html
@@ -119,7 +119,7 @@
     <div class="my-3 d-flex align-items-center flex-wrap">
       <h3 class="text-center">Meu Carrinho</h3>
       <div class="ml-auto">
-        <button class="btn btn-outline-secondary" type="button" id="rastrear">Continuar</button>
+        <button class="btn btn-outline-secondary" type="button" id="continuar">Continuar</button>
       </div>
     </div>
     <div class="row">
@@ -134,11 +134,32 @@
         </div>
       </div>
       <div class="col">
-        <input type="number" placeholder="0">
+        <input type="number" placeholder="1">
       </div>
       <div class="col">
         <p>R$ 150,00</p>
       </div>
+    </div>
+    <hr/>
+    <div class="row">
+      <div class="col">
+        <h3>Frete</h3>
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Insira seu CEP aqui" aria-label=""
+             aria-describedby="frete">
+           <button class="btn btn-outline-secondary mx-2" type="button" id="assinar">Calcular</button>
+         </div>
+      </div>
+      <div class="col">
+        <h3>Resumo do pedido</h3>
+        <p>Subtotal:  R$150,00</p>
+        <p>Frete:     R$50,00</p>
+        <p><strong>Total pedido:    R$200,00</strong></p>
+      </div>
+    </div>
+    <hr/>
+    <div class="d-flex">
+      <button class="ml-auto btn btn-outline-secondary" type="button" id="continuar">Continuar</button>
     </div>
 
   </section>
