--- a/dev/product.html
+++ b/dev/product.html
@@ -94,7 +94,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="" class="nav-link">
+                  <a href="cart.html" class="nav-link">
                     <div class="row align-items-center">
                       <div class="col-2 mr-3"><i class="my-auto fas fa-shopping-cart fa-2x"></i></div>
                       <div class="col">
@@ -143,8 +143,8 @@
             <input type="number" placeholder="0">
           </div>
         </div>
-        <button class="btn btn-outline-secondary" type="button" id="rastrear"><i
-          class="fas fa-shopping-bag"></i> Comprar</button>
+        <a href="cart.html" class="btn btn-outline-secondary" type="button" id="rastrear"><i
+          class="fas fa-shopping-bag"></i> Comprar</a>
         <div>
           <p>Calcular frete</p>
           <div class="input-group">
