--- a/producao/index.html
+++ b/producao/index.html
@@ -94,7 +94,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="" class="nav-link">
+                  <a href="cart.html" class="nav-link">
                     <div class="row align-items-center">
                       <div class="col-2 mr-3"><i class="my-auto fas fa-shopping-cart fa-2x"></i></div>
                       <div class="col">
