Criado página Quem somos

--- a/dev/product.html
+++ b/dev/product.html
@@ -312,7 +312,7 @@
 
         <div class="col-md-4 col-sm-12"><!--Sobre nós-->
           <h4>SOBRE NÓS</h4>
-          <p><a class="link-unstyled" href="#">Quem somos</a></p>
+          <p><a class="link-unstyled" href="sobre.html">Quem somos</a></p>
           <p><a class="link-unstyled" href="#">Políticas da Loja</a></p>
           <p><a class="link-unstyled" href="#">Contato</a></p>
         </div>
