--- a/dev/sobre.html
+++ b/dev/sobre.html
@@ -115,59 +115,21 @@
   </header>
   <!--Fim cabeçalho-->
 
-  <section class="container">
-    <div class="my-3 d-flex align-items-center flex-wrap">
-      <h3 class="text-center">Meu Carrinho</h3>
-      <div class="ml-auto">
-        <button class="btn btn-outline-secondary" type="button" id="continuar">Continuar</button>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4 col-sm-12 my-2">
-        <div class="row">
-          <div class="col-4"><img src="img/categoria_calça01.jpg" alt="" class="mx-auto d-block" style="width: 100px;"></div>
-          <div class="col">
-            <p>Nome do produto</p>
-            <p>Tamanho: P</p>
-            <p>Cor: vermelho</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 my-2">
-        <input type="number" placeholder="1">
-      </div>
-      <div class="col-md-4 my-2">
-        <p>R$ 150,00</p>
-      </div>
-    </div>
-    <hr/>
-    <div class="row">
-      <div class="col-md-6 col-sm-12 my-2">
-        <h3>Frete</h3>
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Insira seu CEP aqui" aria-label=""
-             aria-describedby="frete">
-           <button class="btn btn-outline-secondary mx-2" type="button" id="assinar">Calcular</button>
-         </div>
-      </div>
-      <div class="col-md-6 col-sm-12 my-2">
-        <h3>Resumo do pedido</h3>
-        <p>Subtotal:  R$150,00</p>
-        <p>Frete:     R$50,00</p>
-        <p><strong>Total pedido:    R$200,00</strong></p>
-      </div>
-    </div>
-    <hr/>
-    <div class="my-3 d-flex align-items-center flex-wrap">
-      <div>
-        <button class="btn btn-outline-secondary" type="button" id="continuar">Escolher mais produtos</button>
-      </div>
-      <div class="ml-auto">
-        <button class="btn btn-outline-secondary" type="button" id="continuar">Continuar</button>
-      </div>
-    </div>
-
-  </section>
+  <section class="container"><!--Início corpo da página-->
+    <h3>Quem somos</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin erat turpis, rutrum nec enim vitae, porttitor placerat mi. Sed nec felis non nisi ullamcorper pretium at sed libero. Vestibulum egestas sagittis lectus, a scelerisque ex cursus nec. Vestibulum luctus tristique risus vel pretium. Maecenas nibh ante, efficitur sit amet lacus vitae, mattis bibendum nisi. Morbi molestie urna leo, a vestibulum est vehicula et. Nullam vestibulum sem non mauris tincidunt lacinia. Cras massa mi, convallis vel velit a, luctus placerat lacus. Nunc sed sem at magna lobortis rutrum. Quisque semper eros ante, sed vehicula nisi placerat sed. Donec nisi ipsum, tincidunt et odio non, interdum dignissim libero. Mauris interdum purus eget mauris auctor accumsan. Fusce mauris orci, vulputate nec dictum quis, luctus non ligula.</p>
+    <h3>Missão</h3>
+    <p>Donec imperdiet mattis arcu vel dictum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+    <h3>Visão</h3>
+    <p>Duis placerat purus vehicula porta elementum. Integer pretium nunc ut nisi scelerisque bibendum.</p>
+    <h3>Valores</h3>
+    <ul>
+        <li>Vivamus ullamcorper</li>
+        <li>Vivamus ullamcorper</li>
+        <li>Vivamus ullamcorper</li>
+        <li>Vivamus ullamcorper</li>
+    </ul>
+  </section><!--Final corpo da página-->
 
   <div class="container-fluid bg-amarelo d-flex align-items-center justify-content-center flex-wrap my-3 py-3">
     <!--Início Formulário de Newsletter-->
